test/release/examples/users-guide/datapar/promotion.error1.good
promotion.chpl:106: error: Racy promotion of scalar argument for the formal 'x'
