test/release/examples/users-guide/datapar/promotion.compopts
-stestError=false   # promotion.good
-stestError=true -stestError2=false    # promotion.error1.good
-stestError=true -stestError2=true     # promotion.error2.good
